--- a/stradstyle.css
+++ b/stradstyle.css
@@ -173,6 +173,7 @@
 
           textarea {
               display: block;
+              margin: 0px 0px 0px 0px;
           }
           
 	  #sortable { list-style-type: none; margin: 0; padding: 0; font-size: 0}
